# gitlab-ci-shellcheck

./: .gitignore  .pre-commit-config.yaml  README.md  gitlab_ci_shellcheck.py  setup.cfg
.github/workflows/: unittests.yaml
tests/: shellcheck_test.py
tests/shellcheck_examples/: before-script-expected.json  before-script.sh  before-script.yaml  simple-test-expected.json  simple-test.yaml
