[metadata]
name = gitlab-ci-shellcheck
version = 0.1.0
url = https://github.com/spyoungtech/gitlab-ci-shellcheck
description = A utility (and pre-commit hook) for running shellcheck against shell scripts inside GitLab CI YAML files.
long_description = file: README.md
long_description_content_type = text/markdown
author_email = spencer.young@spyoung.com
author = Spencer Young
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

keywords =
    gitlab
    ci
    yaml
    shellcheck
    script
    pre-commit

[options]
py_modules = gitlab_ci_shellcheck
install_requires =
    pyyaml
